--- a/AttendanceApp.UI/Views/Home/Index.cshtml
+++ b/AttendanceApp.UI/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Students Attendance Management System</h1>
+    <p>This project manages attendance of students.</p>
+    <p>To create a new report press:</p>
+    @Html.ActionLink("Add new report", "Index", "Report")
 </div>
