Delete Attendance report

--- a/AttendanceApp.UI/Views/Report/Index.cshtml
+++ b/AttendanceApp.UI/Views/Report/Index.cshtml
@@ -38,6 +38,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Update", new { id = item.ReportID })
+                @Html.ActionLink("Delete", "Delete", new { id = item.ReportID })
             </td>
         </tr>
 }
