--- a/AttendanceApp.UI/Views/Report/Create.cshtml
+++ b/AttendanceApp.UI/Views/Report/Create.cshtml
@@ -12,6 +12,8 @@
                 ViewData["Teachers"] as SelectList,
                 "Please select teacher",
                 new { @class = "form-control" })
+
+                @Html.ValidationMessageFor(m => m.Teachers.Id, "Please select teacher.", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
