--- a/AttendanceApp.UI/Views/StudentAttendancy/Create.cshtml
+++ b/AttendanceApp.UI/Views/StudentAttendancy/Create.cshtml
@@ -7,16 +7,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="ReportID" class="control-label"></label>
+                <input asp-for="ReportID" class="form-control" readonly />
+            </div>
+            <div class="form-group">
                 @Html.DropDownListFor(
                 student => student.Student.Id,
                 ViewData["Students"] as SelectList,
                 "Please select student",
                 new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                <label asp-for="ReportID" class="control-label"></label>
-                <input asp-for="ReportID" class="form-control" readonly />
-                <span asp-validation-for="ReportID" class="text-danger"></span>
+
+                @Html.ValidationMessageFor(m => m.Student.Id, "Please select student.", new { @class = "text-danger" })
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -31,7 +32,7 @@
 </div>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.ReportID})
 </div>
 
 
