--- a/AttendanceApp.UI/Views/Student/Index.cshtml
+++ b/AttendanceApp.UI/Views/Student/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<AttendanceApp.UI.TeacherModel>
+﻿@model IEnumerable<AttendanceApp.UI.StudentModel>
 
 <p>
-    @Html.ActionLink("Add new teacher", "Create")
+    @Html.ActionLink("Add new student", "Create")
 </p>
 <table class="table">
     <thead>
@@ -13,10 +13,13 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Course)
+                @Html.DisplayNameFor(model => model.Age)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StudentGroupID)
             </th>
             <th></th>
         </tr>
@@ -31,13 +34,16 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Course)
+                @Html.DisplayFor(modelItem => item.Age)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Update", new { id = item.Id }) |
+                @Html.DisplayFor(modelItem => item.StudentGroupID)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Update", new { id = item.Id }) 
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
