--- a/AttendanceApp.UI/Views/Shared/_Layout.cshtml
+++ b/AttendanceApp.UI/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index"><img id="loginIcon" src="~/Images/user.png"/> Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index"><img id="iconLogin" src="~/Images/user.png"/> Login</a>
                         </li>
                     </ul>
                 </div>
