--- a/AttendanceApp.UI/Views/Home/Index.cshtml
+++ b/AttendanceApp.UI/Views/Home/Index.cshtml
@@ -1,17 +1,19 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<section class="jumbotron text-center">
-    <div class="container">
-        <h1>Students Attendance Management System</h1>
-        <p class="lead text-muted mb-0"><strong>Attendance Management System</strong> made for tracking student attendance.</p>      
-        <p class="lead text-muted mb-0">Application that simplifies the collection and analysis of attendance data.</p>
-        <p class="lead text-muted">All information that is used to create a report can be edited.</p>
-        <p>
-            <a href="Report/Index" class="btn btn-outline-dark btn-lg ">Create a new report</a>
-        </p>
-    </div>
-    <div>
-        <img id="homePagePicture" src="~/Images/homePicture2.jpg" alt="HomePage" />
-    </div>
-</section>
+<body id="example1">
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1>Students Attendance Management System</h1>
+            <p class="lead text-muted mb-0"><strong>Attendance Management System</strong> made for tracking student attendance.</p>
+            <p class="lead text-muted mb-0">Application that simplifies the collection and analysis of attendance data.</p>
+            <p class="lead text-muted">All information that is used to create a report can be edited.</p>
+            <p>
+                <a href="Report/Index" class="btn btn-outline-dark btn-lg ">Create a new report</a>
+            </p>
+        </div>
+        @*<div>
+                <img id="homePagePicture" src="~/Images/homePicture2.jpg" alt="HomePage" />
+            </div>*@
+    </section>
+</body>
