--- a/AttendanceApp.UI/Views/Student/Create.cshtml
+++ b/AttendanceApp.UI/Views/Student/Create.cshtml
@@ -7,40 +7,40 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label labelTitle"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Surname" class="control-label"></label>
+                <label asp-for="Surname" class="control-label labelTitle"></label>
                 <input asp-for="Surname" class="form-control" />
                 <span asp-validation-for="Surname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
+                <label asp-for="Age" class="control-label labelTitle"></label>
                 <input asp-for="Age" type="number" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label labelTitle"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StudentGroupID" class="control-label"></label>
+                <label asp-for="StudentGroupID" class="control-label labelTitle"></label>
                 <select class="form-control" asp-for="StudentGroupID" asp-items="Html.GetEnumSelectList<StudentGroup>()">
                     <option selected="selected" value="">Please select student group</option>
                 </select>
                 <span asp-validation-for="StudentGroupID" class="text-danger">Select a student group</span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create New Student" class="btn btn-secondary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href='@Url.Action("Index")' class="btn btn-light"><img class="returnButtonIcon" src="~/Images/return.png" /> Back To Student List</a>
 </div>
 
