--- a/AttendanceApp.UI/Views/StudentAttendancy/Create.cshtml
+++ b/AttendanceApp.UI/Views/StudentAttendancy/Create.cshtml
@@ -7,10 +7,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ReportID" class="control-label"></label>
+                <label asp-for="ReportID" class="control-label labelTitle"></label>
                 <input asp-for="ReportID" class="form-control" readonly />
             </div>
             <div class="form-group">
+                <label asp-for="Student" class="control-label labelTitle"></label>
                 @Html.DropDownListFor(
                 student => student.Student.Id,
                 ViewData["Students"] as SelectList,
@@ -19,20 +20,19 @@
 
                 @Html.ValidationMessageFor(m => m.Student.Id, "Please select student.", new { @class = "text-danger" })
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsPresent" /> @Html.DisplayNameFor(model => model.IsPresent)
-                </label>
-            </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label labelTitle">
+                        <input class="form-check-input" asp-for="IsPresent" /> @Html.DisplayNameFor(model => model.IsPresent)
+                    </label>
+                </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save Student Attendance" class="btn btn-secondary" />
             </div>
-        </form>
+</form>
     </div>
 </div>
-
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = Model.ReportID})
+    <a href='@Url.Action("Index", new { id = Model.ReportID})' class="btn btn-light"><img class="returnButtonIcon" src="~/Images/return.png" /> Back To Student Attendance List</a>
 </div>
 
 
