--- a/AttendanceApp.UI/Views/StudentAttendancy/Update.cshtml
+++ b/AttendanceApp.UI/Views/StudentAttendancy/Update.cshtml
@@ -7,24 +7,25 @@
         <form asp-action="Update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.HiddenFor(m => m.Id)
-            <div class="form-group">
+        <div class="row">
+            <div class="form-group col-sm">
                 @Html.DisplayFor(modelItem => Model.Student.Title)
                 @Html.HiddenFor(m => m.Student.Id)
             </div>
             @Html.HiddenFor(m => m.ReportID)
-            <div class="form-group form-check">
+            <div class="form-group form-check col-sm">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsPresent" /> @Html.DisplayNameFor(model => model.IsPresent)
                 </label>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+        </div>
+                <div class="form-group">
+                    <input type="submit" value="Save Changes" class="btn btn-secondary" />
+                </div>
         </form>
     </div>
 </div>
-
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = Model.ReportID })
+    <a href='@Url.Action("Index", new { id = Model.ReportID})' class="btn btn-light"><img class="returnButtonIcon" src="~/Images/return.png" /> Back To Student Attendance List</a>
 </div>
 
