--- a/AttendanceApp.UI/wwwroot/css/site.css
+++ b/AttendanceApp.UI/wwwroot/css/site.css
@@ -69,38 +69,70 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
-#students {
+#indexList {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-#students td, #students th {
+#indexList td, #indexList th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#students tr:nth-child(even) {
+#indexList tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#students tr:hover {
+#indexList tr:hover {
     background-color: #ddd;
 }
 
-#students th {
+#indexList th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
-    color: white;
+    background-color: #a7bed3;
+    color: #242526;
 }
+
 #homePagePicture{
     border-radius: 8px;
     width: 100%;
     max-width: 500px;
 }
-#loginIcon {
+
+#iconLogin {
     width: 24px;
     height: 24px;
+}
+
+.buttonIcon {
+    width: 18px;
+    height: 18px;
+    margin-right: 2px;
+}
+
+.returnButtonIcon {
+    width: 22px;
+    height: 22px;
+    margin-right: 6px;
+}
+
+.labelTitle {
+    font-size: 18px;
+}
+
+#example1 {
+    background-image: url('/Images/BackgroundVer3.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+input[type=checkbox] {
+    transform: scale(1.3);
+}
+
+.footer {
+    background-color: #fff
 }
