--- a/AttendanceApp.UI/Views/Report/Index.cshtml
+++ b/AttendanceApp.UI/Views/Report/Index.cshtml
@@ -10,7 +10,7 @@
                 @Html.DisplayNameFor(model => model.ReportID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Teachers.Name)
+                Teachers Name
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
